@@ -10,6 +10,8 @@ Changes in @NEW@:
     * Some unhandled tags will cause errors at build time, to
       ensure that any necessary handling is done before such
       packages are built into a repository. (CNY-3404)
+    * Allow automatic sharing of InitialContents files, including ghost
+      files for encapsulated RPMs
 
   o Bug Fixes:
     * For locale RPM dependencies, RPM flags are now properly converted 
